--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>today's Project</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section>
+        <div>
+            <h1>Welcome To</h1>
+            <h1><span class="orange">Alamin's </span> Worlds</h1>
+            <h3>the world's best Hacker</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, consequatur? Est fuga accusantium voluptatibus omnis quibusdam? Labore vel in voluptatem?</p>
+        </div>
+        <div>
+        
+            <img src='images/jhankar.png'; alt="Jhanker mahbub">
+        </div>
+    </section>
 </body>
 </html>
