--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
-        <div>
+    <section class="top-area">
+        <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange">Alamin's </span> Worlds</h1>
             <h3>the world's best Hacker</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, consequatur? Est fuga accusantium voluptatibus omnis quibusdam? Labore vel in voluptatem?</p>
+        
+        <a target='_blank' href="www.alamin.xyz">Hire Me</a>
+
         </div>
-        <div>
+        <div class="half-width">
         
             <img src='images/jhankar.png'; alt="Jhanker mahbub">
         </div>
