dream big added

--- a/index.html
+++ b/index.html
@@ -26,5 +26,16 @@
             <img src='images/jhankar.png'; alt="Jhanker mahbub">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="Jhanker">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, cumque assumenda distinctio id laborum iure!</p>
+            <a href="">Dream Big</a>
+        </div>
+        
+    </section>
 </body>
 </html>
