--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-area">
+    <section class="top-area flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange">Alamin's </span> Worlds</h1>
@@ -26,7 +26,7 @@
             <img src='images/jhankar.png'; alt="Jhanker mahbub">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/jhankar2.png" alt="Jhanker">
         </div>
@@ -37,5 +37,25 @@
         </div>
         
     </section>
+    <section class="experiences">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div class="half-width shadow">
+                <h2>Full stack Web Developer</h2>
+                <h3 class="orange">Pro Level Programmer</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus illo labore necessitatibus itaque, cumque consequatur molestias nobis!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus illo labore necessitatibus itaque, cumque consequatur molestias nobis!</p>
+            </div>
+
+            <div class="half-width shadow">
+                <h2>Full stack Web Developer</h2>
+                <h3 class="orange">Pro Level Programmer</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus illo labore necessitatibus itaque, cumque consequatur molestias nobis!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus illo labore necessitatibus itaque, cumque consequatur molestias nobis!</p>
+            </div>
+
+        </div>
+    </section>
+    <footer>
+        &copy;software Developed & Maintenance By Alamin Shikdar
+    </footer>
 </body>
 </html>
